objects/Case.object
<CustomObject>
    <fields>
        <fullName>MMAV_Version__c</fullName>
        <label>MMAV Version</label>
        <picklist>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Machine_Downtime__c</fullName>
        <label>Machine Downtime</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mass_Case_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Case Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Entitlement__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag that determines if the contact has entitlment for the product.</description>
        <inlineHelpText>Flag that determines if the contact has entitlment for the product.</inlineHelpText>
        <label>No Entitlement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Customer Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notify_Thread_Id_del__c</fullName>
        <formula>&quot;ref:_00D&quot; &amp; MID(Id,4,1) &amp; RIGHT($Organization.Id, 6) &amp; &quot;._&quot; &amp; LEFT(Id,4) &amp; RIGHT(Id,6) &amp; &quot;:ref&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Notify Thread Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Articles__c</fullName>
        <label>Number of Articles</label>
        <summaryForeignKey>Case_Article_Junction__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <label>OS</label>
        <picklist>
            <controllingField>Platform__c</controllingField>
            <picklistValues>
                <fullName>11.i</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2003 Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIX 5.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIX 5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redhat 9.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redhat 8.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redhat 7.3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redhat 7.2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redhat 6.X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHEL 6.X</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHEL 5.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHEL 4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHEL 3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RHEL 2.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLES 11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLES 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SLES 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaris 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaris 9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaris 8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 2012</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows 7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XP Pro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vista</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Open_CCMS__c</fullName>
        <formula>If(
$Organization.Id =&apos;00DK0000002aNqD&apos;, Hyperlink($Label.CCMS_URL_Test+CCR__r.Trunc_CCR_ID__c, &quot; CCR__r.CCMS_Id__c &quot;), 
If( $Organization.Id =&apos;00D7A000000D694&apos;, Hyperlink( $Label.CCMS_URL+CCR__r.Trunc_CCR_ID__c,  &quot; CCR__r.CCMS_Id__c &quot;), &quot;Something Broke&quot;))</formula>
        <label>Open CCMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Open_Date_MVF__c</fullName>
        <formula>CCR__r.Date_Opened__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Date MVF</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Item_Priority__c</fullName>
        <label>Open Item Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Open_Items_Description__c</fullName>
        <label>Open Items Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Open_Items__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Items</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_Submit_Date__c</fullName>
        <description>Original submission date of case.</description>
        <label>Original Submit Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Other_Knowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if any other knowledge artifact is used in resolving.</description>
        <inlineHelpText>Select if any other knowledge artifact is used in resolving.</inlineHelpText>
        <label>Other Knowledge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <description>If failure code is Other, enter the reason here</description>
        <inlineHelpText>If failure code is Other, enter the reason here</inlineHelpText>
        <label>Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Out_Of_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this case was created by an out-of-office response</description>
        <inlineHelpText>Indicates whether this case was created by an out-of-office response</inlineHelpText>
        <label>Out Of Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Out_of_Criteria_DIP__c</fullName>
        <description>Out of Criteria logic for DIP record type.</description>
        <formula>Case( $RecordType.Name, &quot;DIP&quot;,
IF(OR(Ispickval(Status, &quot;Completed&quot;), Ispickval(Status, &quot;Closed&quot;)), &quot;&quot;, 
IF (Case_Age__c  &gt; 90, &quot;Backlog - Case is &gt; 90 days&quot;,
IF (AND(Ispickval(Status, &quot;New&quot;), Now() - CDN_Last_Modified_Date__c &gt; 1), &quot;New Case&quot;,
IF (AND(Now() - CDN_Last_Modified_Date__c &gt; 14,OR(Ispickval(Status, &quot;Working&quot;), Ispickval(Status, &quot;Wait/Expert&quot;))), &quot;Case not updated recently&quot;,
IF(Case_Age__c &gt; 30, &quot;Backlog - Case is &gt; 30 days&quot;,
IF(AND(Now() - CDN_Last_Modified_Date__c &gt; 7,OR(Ispickval(Status, &quot;Working&quot;), Ispickval(Status, &quot;Wait/Expert&quot;))), &quot;Case not updated recently&quot;, &quot;&quot; )))))),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Criteria DIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Criteria_Default__c</fullName>
        <description>Out of Criteria Logic for Default record type.</description>
        <formula>Case( $RecordType.Name, &quot;Default&quot;, 
IF( OR(Ispickval(Status, &quot;Completed&quot;), Ispickval(Status, &quot;Closed&quot;)), &quot;&quot;, 
IF(AND(Case_Age__c &gt; 180, !Ispickval(Status, &quot;Wait/CCR&quot;), !Ispickval(Status, &quot;Wait/Release&quot;)), &quot;Backlog - Case is &gt;180 days old&quot;, 
IF(AND(Case_Age__c &gt; 90,!Ispickval(Status, &quot;Wait/CCR&quot;), !Ispickval(Status, &quot;Wait/Release&quot;)),&quot;Backlog - Case is &gt;90 days old&quot;, 
IF(AND(Case_Age__c&gt; 30, ISNULL(CCR__c)), &quot;Backlog - Case is &gt;30 days old, no CCR&quot;, 
IF(AND(Ispickval(Status, &quot;New&quot;),( OwnerId != $Setup.CS_Delay__c.Queue_Id__c )), &quot;New Case&quot;, 
IF(AND(Now() - CDN_Last_Modified_Date__c &gt; 5, AND(!Ispickval(Status, &quot;Wait/CCR&quot;),!Ispickval(Status, &quot;Wait/Critical CCR&quot;), !Ispickval(Status, &quot;Wait/Release&quot;))), &quot;Case not updated recently&quot;, 
IF(AND(Case_Age__c&gt; 7, ISNULL(CCR__c)), &quot;Backlog - Case is &gt;7 days old, no CCR&quot;, 
IF(AND(Now() - CDN_Last_Modified_Date__c &gt; 7, CCR_State__c = &quot;Review&quot;), &quot;CCR Needs to be Reviewed&quot;, 

IF(AND(Now() - CCR__r.Original_Submit_Date__c &gt; 21, Ispickval(Status, &quot;Wait/Critical CCR&quot;),
Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;), Ispickval(CCR__r.RepSeverity__c,&quot;0 - No Workaround&quot;)), &quot;S0 Bug Fix Overdue&quot;,

IF(AND(Now() - CCR__r.Original_Submit_Date__c &gt; 60, Ispickval(Status, &quot;Wait/Critical CCR&quot;),
Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;), AND(Ispickval(CCR__r.RepSeverity__c,&quot;1 - Workaround&quot;), Ispickval(CCR__r.Requestor_Urgency__c,&quot;Urgent&quot;))), &quot;Urgent S1 Bug Fix Overdue&quot;, 

IF(AND(Now() - CCR__r.Original_Submit_Date__c &gt; 7, OR(CCR_State__c =&quot;Submitted&quot;, CCR_State__c=&quot;Evaluated&quot;, CCR_State__c= &quot;Characterized&quot;), Ispickval(CCR__r.Rep_Request_Type__c, &apos;Bug&apos;),  OR(Ispickval(CCR__r.RepSeverity__c,&quot;0 - No Workaround&quot;), AND(Ispickval(CCR__r.RepSeverity__c,&quot;1 - Workaround&quot;), Ispickval(CCR__r.Requestor_Urgency__c,&quot;Urgent&quot;)))), &quot;Critical CCR Needs R&amp;D Attention&quot;, 

IF(AND(Now() - CDN_Last_Modified_Date__c &gt; 7, AND(!ispickval(Status, &quot;Wait/CCR&quot;), !Ispickval(Status, &quot;Wait/Release&quot;), CCR_State__c != &quot;MoreInfo&quot;)),&quot;Non-Critical CCR&quot;,&quot;&quot;)))))))))))),&apos;&apos;)</formula>
        <label>Out of Criteria Default</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_Criteria_VIP__c</fullName>
        <description>Out of Criteria Logic for VIP record type.</description>
        <formula>Case( $RecordType.Name, &quot;VIP&quot;, 
IF(OR(Ispickval(Status, &quot;Completed&quot;), Ispickval(Status, &quot;Closed&quot;)), &quot;&quot;, 
IF(AND(Case_Age__c &gt; 30, !ISNULL(CCR__r.CreatedDate)), &quot;Backlog - Case (with CCR) is &gt;30 days old&quot;, 
IF(AND(Case_Age__c &gt; 15, ISNULL(CCR__r.CreatedDate)), &quot;Backlog - Case is &gt; 15 days old, no CCR&quot;, 
IF(AND(Case_Age__c &gt; 7, Case_Age__c &lt; 15, ISNULL(CCR__r.CreatedDate)), &quot;Backlog - Case is &gt; 7 and &lt; 15 days old, no CCR&quot;, 
IF(AND(Ispickval(Status, &quot;New&quot;), Now() - CDN_Last_Modified_Date__c &gt; 1), &quot;New Case&quot;, 
IF(AND(Now() - Last_Contacted__c &gt; 5, !OR(Ispickval(Status, &quot;Wait/CCR&quot;),Ispickval(Status, &quot;Wait/Critical CCR&quot;))), &quot;Case not updated recently&quot;, 

IF(AND(OR(Ispickval(CCR__r.State__c,&quot;Submitted&quot;), Ispickval(CCR__r.State__c,&quot;Evaluated&quot;), Ispickval(CCR__r.State__c,&quot;Characterized&quot;)), NOW() - CCR__r.LastModifiedDate &gt; 1, 
Ispickval(Status,&quot;Wait/Critical CCR&quot;), Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;),
Ispickval(CCR__r.RepSeverity__c,&quot;0 - No Workaround&quot;)), &quot;S0 CCRs need R&amp;D attention&quot;,

IF(AND(OR(Ispickval(CCR__r.State__c,&quot;Submitted&quot;), Ispickval(CCR__r.State__c,&quot;Evaluated&quot;), Ispickval(CCR__r.State__c,&quot;Characterized&quot;)), NOW() - CCR__r.LastModifiedDate &gt; 2, 
Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;), AND(Ispickval(CCR__r.RepSeverity__c,&quot;1 - Workaround&quot;), Ispickval(CCR__r.Requestor_Urgency__c,&quot;Urgent&quot;))), &quot;S1 CCRs needs R&amp;D attention&quot;, 

IF(AND(OR(Ispickval(CCR__r.State__c,&quot;Submitted&quot;), Ispickval(CCR__r.State__c,&quot;Evaluated&quot;), Ispickval(CCR__r.State__c,&quot;Characterized&quot;)), NOW() - CCR__r.LastModifiedDate &gt; 5, 
OR(AND(Ispickval(CCR__r.RepSeverity__c,&quot;1 - Workaround&quot;), Ispickval(CCR__r.Requestor_Urgency__c,&quot;Urgent&quot;)), Ispickval(CCR__r.RepSeverity__c,&quot;2 - Minor&quot;))), &quot;S1(default)/S2 CCRs needs R&amp;D attention&quot;,

IF(AND(Now() - CCR__r.Original_Submit_Date__c &gt; 2, Ispickval(Status, &quot;Wait/Critical CCR&quot;),
Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;), Ispickval(CCR__r.RepSeverity__c,&quot;0 - No Workaround&quot;)), &quot;S0 Bug Fix Overdue&quot;,

IF(AND(Now() - CCR__r.Original_Submit_Date__c &gt; 5, Ispickval(Status, &quot;Wait/Critical CCR&quot;), 
Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;), AND(Ispickval(CCR__r.RepSeverity__c,&quot;1 - Workaround&quot;), Ispickval(CCR__r.Requestor_Urgency__c,&quot;Urgent&quot;))), &quot;S1 Bug Fix Overdue&quot;, 

IF(AND(Now() - CCR__r.Original_Submit_Date__c &gt; 30, 
Ispickval(Status, &quot;Wait/Critical CCR&quot;), Ispickval(CCR__r.Rep_Request_Type__c,&quot;Bug&quot;), 
OR(AND(Ispickval(CCR__r.RepSeverity__c,&quot;1 - Workaround&quot;), Ispickval(CCR__r.Requestor_Urgency__c,&quot;Default&quot;)), Ispickval(CCR__r.RepSeverity__c,&quot;2 - Minor&quot;))),  &quot;S1(Default)/S2 Bug fix Overdue&quot;, 

IF(AND(OR(Ispickval(CCR__r.State__c,&quot;Submitted&quot;), Ispickval(CCR__r.State__c,&quot;Evaluated&quot;), Ispickval(CCR__r.State__c,&quot;Characterized&quot;)), NOW() - CCR__r.LastModifiedDate &gt; 5, 
Ispickval(CCR__r.Rep_Request_Type__c,&quot;Enhancement&quot;)), &quot;Enhancement CCR R&amp;D attention&quot;,
 
IF(AND(NOW() - CCR__r.LastModifiedDate &gt; 7, Ispickval(CCR__r.State__c,&quot;Review&quot;)), IMAGE(&quot;/img/samples/flag_yellow.gif&quot;, &apos;Yellow&apos;),IMAGE(&apos;/img/samples/flag_green.gif&apos;,&apos;Green&apos;))))))))))))))),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Out of Criteria VIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Notes__c</fullName>
        <label>Outstanding Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Override_Reason__c</fullName>
        <label>Override Reason</label>
        <picklist>
            <picklistValues>
                <fullName>HDS Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initiative Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Exception</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Sales Exception</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Overwrite_Existing_Keywords__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will replace existing keyword on selected cases.</description>
        <inlineHelpText>Please check to replace existing keyword on selected Cases, if available. 
Un-check to add Keyword on selected Cases separated by Comma.</inlineHelpText>
        <label>Overwrite Existing Keywords</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PHY_Architecture__c</fullName>
        <label>PHY Architecture</label>
        <picklist>
            <picklistValues>
                <fullName>DLL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PHY_Structure__c</fullName>
        <label>PHY Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Hardened</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Synthesizable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account, Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>Integration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Number__c</fullName>
        <formula>IF(Parent.CaseNumber==&apos;0&apos;, &apos;&apos;, Parent.CaseNumber)</formula>
        <label>Parent Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Case_Owner__c</fullName>
        <formula>Parent.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patch_Level_del__c</fullName>
        <description>Patch Level</description>
        <label>Patch Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage_Of_Machine_Down__c</fullName>
        <label>Percentage Of Machine Down</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Phone_Extension__c</fullName>
        <formula>Contact.Phone+&quot;  &quot; +Contact.Extension__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platform__c</fullName>
        <label>Platform</label>
        <picklist>
            <picklistValues>
                <fullName>HPPARISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBMRISC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SOL_x86_64</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solaris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Power_Distribution_Unit__c</fullName>
        <label>Power Distribution Unit</label>
        <picklist>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Sales_Category__c</fullName>
        <label>Pre-Sales Category</label>
        <picklist>
            <picklistValues>
                <fullName>Imaging Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Sales__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field on TIP Case Layout</description>
        <label>Pre-Sales</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preview__c</fullName>
        <formula>HYPERLINK(&apos;/apex/case_CDSInfo_Page?Id=&apos;+Id, &apos;Open&apos;,&apos;_blank&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <description>This field contain login id of previous owner.</description>
        <label>Previous Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Private_Attachments_ID__c</fullName>
        <description>Store Attachments ID&apos;s which are marked as private by Users and need to hide on COS 2.0 platform.</description>
        <label>Private Attachments ID</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Class_Name__c</fullName>
        <label>Product Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Feature</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Prod_Cls_to_Feat_Jct__c.Product_Class__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Prod_Cls_to_Feat_Jct__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Level_1_name__c</fullName>
        <label>Product Feature Level 1 name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Level_2_name__c</fullName>
        <label>Product Feature Level 2 name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Lvl_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>You must save this record with a Product Feature first BEFORE you can fill out this field.</description>
        <inlineHelpText>You must save this record with a Product Feature first BEFORE you can fill out this field.</inlineHelpText>
        <label>Product Feature Level 1</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Product_Feature_Level_1__c.Product_Feature__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Feature2__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product_Feature_Level_1__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Feature_Level_1__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Lvl_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>You must save this record with a Product Feature Level 1 first BEFORE you can fill out this field.</description>
        <inlineHelpText>You must save this record with a Product Feature Level 1 first BEFORE you can fill out this field.</inlineHelpText>
        <label>Product Feature Level 2</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Product_Feature_Level_2__c.Product_Feature_Level_1__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Feature_Lvl_1__c</valueField>
            </filterItems>
            <filterItems>
                <field>Product_Feature_Level_2__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product_Feature_Level_2__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Name__c</fullName>
        <label>Product Feature Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Queue__c</fullName>
        <label>Product Feature Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Feature_Version__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>You must save this record with a Product Feature first BEFORE you can fill out this field.</description>
        <inlineHelpText>You must save this record with a Product Feature first BEFORE you can fill out this field.</inlineHelpText>
        <label>Product Feature Version</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Product_Feature_Version__c.Product_Feature__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Feature2__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product_Feature_Version__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is for UI purposes only.  Please do not use this field.</description>
        <inlineHelpText>This field is for UI purposes only.  Please do not use this field.</inlineHelpText>
        <label>Product Feature (DO NOT USE)</label>
        <referenceTo>Product_Feature__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if Product Manual is used in resolving this case.</description>
        <inlineHelpText>Select if Product Manual is used in resolving this case.</inlineHelpText>
        <label>Product Manual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>DIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TIP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is a lookup to the Junction object that sits between Product Feature and Product Attribute. This is used as a &quot;Support Product&quot;</description>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Class__c.Active_Flag__c</field>
                <operation>equals</operation>
                <value>true</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product_Class__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Customer Project</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RAK_Training__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select if RAK or Training is used in resolving this case.</description>
        <inlineHelpText>Select if RAK or Training is used in resolving this case.</inlineHelpText>
        <label>RAK-Training</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reassign_Click_count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Reassign Click count</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reassigned_Clicked_by__c</fullName>
        <label>Reassigned Clicked by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_While_Active__c</fullName>
        <description>This is the region being populated via workflow from the Case Owner user record.</description>
        <inlineHelpText>This is the region of the current owner on the case.</inlineHelpText>
        <label>Active Region</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>TEXT(Hidden_Owner__r.Region__c)</formula>
        <label>Owner Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>Only Parent accounts allowed</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Parent Account, Partner-Parent Account</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>5_1 - Data Steward, Integration</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Related Account)</relationshipLabel>
        <relationshipName>RelatedAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Date__c</fullName>
        <formula>CCR__r.Release_Date__c</formula>
        <label>Release Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reopen_Counter__c</fullName>
        <label>Reopen Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rep_Request_Type__c</fullName>
        <formula>TEXT(CCR__r.Rep_Request_Type__c)</formula>
        <label>Rep Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor_Urgency__c</fullName>
        <formula>TEXT(CCR__r.Requestor_Urgency__c)</formula>
        <label>Requestor Urgency</label>
        <type>Text</type>
    </fields>
</CustomObject>